# voxcore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  smoke_test_phase2.py  smoke_test_phase3.py  smoke_test_phase4.py  smoke_test_phase5.py  smoke_test_phase5_memory_plugins.py  smoke_test_phase6.py
backend/: test_llm.py  voxcore.db  voxcore.db-shm  voxcore.db-wal
backend/scripts/: seed_db.py
backend/voxcore/: index.html  main.py
demo_client/: index.html  start_client.py
docs/: 00-documentation-index.md  00-engineering-documentation-guide.md  01-software-requirements-specification.md  glossary.md
docs/02-system-architecture/: 01-architectural-goals.md  02-quality-attributes.md  03-architectural-principles.md  04-layered-architecture.md  05-runtime-architecture.md  06-component-architecture.md  07-communication-architecture.md  08-infrastructure-architecture.md  09-deployment-architecture.md  10-extension-points.md  README.md  Voice-Pipeline-Flow.md
docs/03-package-architecture/: 01-source-tree.md  02-package-dependency-rules.md  04-package-responsibilities.md  05-package-communication.md  06-package-extension-rules.md  README.md
docs/04-low-level-design/: 00-module-design-index.md  01-implementation-guidelines.md  02-technology-decisions.md  README.md
docs/05-implementation-specification/: 01-api-package-spec.md  02-configuration-package-spec.md  03-contracts-package-spec.md  04-memory-package-spec.md  05-observability-package-spec.md  06-plugins-package-spec.md  07-providers-package-spec.md  README.md  (+5 more)
(+120 files in other folders)
