[project]
name = "voxcore"
version = "0.1.0"
description = "Open-source runtime for building real-time conversational voice AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "passlib>=1.7.4",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.50.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
